--- a/03-adminpro/src/app/app.component.html
+++ b/03-adminpro/src/app/app.component.html
@@ -1,4 +1,4 @@
-<router-outlet />
+
 <div id="main-wrapper">
   <app-header />
   <app-sidebar />
@@ -10,7 +10,8 @@
         <div class="col-12">
           <div class="card">
             <div class="card-body">
-              This is some text within a card block.
+              <router-outlet />
+              <!-- This is some text within a card block. -->
             </div>
           </div>
         </div>
