--- a/03-adminpro/src/app/pages/pages.component.html
+++ b/03-adminpro/src/app/pages/pages.component.html
@@ -4,17 +4,18 @@
   <div class="page-wrapper">
     <div class="container-fluid">
       <app-breadcrumbs />
+      <!-- sistema de rutas -->
+      <router-outlet />
 
-      <div class="row">
+      <!-- <div class="row">
         <div class="col-12">
           <div class="card">
             <div class="card-body">
-              <router-outlet />
-              <!-- This is some text within a card block. -->
+              
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
     </div>
     <!-- ============================================================== -->
     <!-- footer -->
