--- a/03-adminpro/src/app/auth/register/register.component.html
+++ b/03-adminpro/src/app/auth/register/register.component.html
@@ -5,36 +5,45 @@
   style="background-image:url(../assets/images/background/login-register.jpg);">
   <div class="login-box card">
     <div class="card-body">
-      <form class="form-horizontal form-material" id="loginform" action="index.html">
+      <form class="form-horizontal form-material"
+      id="loginform" [formGroup]="registerForm" autocomplete="off" (ngSubmit)="crearUsuario()">
         <a href="javascript:void(0)" class="text-center db"><img src="../assets/images/logo-icon.png"
             alt="Home" /><br /><img src="../assets/images/logo-text.png" alt="Home" /></a>
         <h3 class="box-title m-t-40 m-b-0">Register Now</h3><small>Create your account and enjoy</small>
         <div class="form-group m-t-20">
           <div class="col-xs-12">
-            <input class="form-control" type="text" required="" placeholder="Name">
+            <input class="form-control" type="text" required="" formControlName="nombre" placeholder="Name">
           </div>
         </div>
         <div class="form-group ">
           <div class="col-xs-12">
-            <input class="form-control" type="text" required="" placeholder="Email">
+            <input class="form-control" type="text" required="" formControlName="email" placeholder="Email">
           </div>
         </div>
         <div class="form-group ">
           <div class="col-xs-12">
-            <input class="form-control" type="password" required="" placeholder="Password">
+            <input class="form-control" type="password" required="" formControlName="password" placeholder="Password">
           </div>
         </div>
         <div class="form-group">
           <div class="col-xs-12">
-            <input class="form-control" type="password" required="" placeholder="Confirm Password">
+            <input class="form-control" type="password" required="" formControlName="password2" placeholder="Confirm Password">
           </div>
         </div>
         <div class="form-group row">
           <div class="col-md-12">
             <div class="checkbox checkbox-primary p-t-0">
-              <input id="checkbox-signup" type="checkbox">
+              <input id="checkbox-signup" formControlName="terminos" type="checkbox">
               <label for="checkbox-signup"> I agree to all <a href="#">Terms</a></label>
             </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col text-danger">
+            <p *ngIf="compoNoValido('nombre')">El nombre es obligatorio</p>
+            <p *ngIf="compoNoValido('email')">El email es obligatorio</p>
+            <p *ngIf="contrasenaNoValida()">Las contraseñas deben ser iguales</p>
+            <p *ngIf="aceptaTerminos()">Los terminos de condicion debe ser aceptados</p>
           </div>
         </div>
         <div class="form-group text-center m-t-20">
@@ -45,7 +54,7 @@
         </div>
         <div class="form-group m-b-0">
           <div class="col-sm-12 text-center">
-            <p>Already have an account? <a href="pages-login-2.html" class="text-info m-l-5"><b>Sign In</b></a></p>
+            <p>Already have an account? <a [routerLink]="['/login']" class="text-info m-l-5"><b>Sign In</b></a></p>
           </div>
         </div>
       </form>
