--- a/03-adminpro/src/app/shared/sidebar/sidebar.component.html
+++ b/03-adminpro/src/app/shared/sidebar/sidebar.component.html
@@ -8,9 +8,9 @@
     <nav class="sidebar-nav">
       <ul id="sidebarnav">
         <li class="user-profile">
-          <a class="has-arrow waves-effect waves-dark" aria-expanded="false"><img
-              [src]="usuario.imagenUrl" alt="user" /><span class="hide-menu">{{ usuario.nombre }}</span></a>
-          <ul aria-expanded="false" class="collapse">
+          <a class="has-arrow waves-effect waves-dark" aria-expanded="false"><img [src]="usuario.imagenUrl"
+              alt="user" /><span class="hide-menu">{{ usuario.nombre }}</span></a>
+          <ul>
             <li><a routerLink="./perfil" routerLinkActive="active">My Profile </a></li>
             <li><a href="javascript:void()">My Balance</a></li>
             <li><a href="javascript:void()">Inbox</a></li>
@@ -20,14 +20,23 @@
         </li>
         <li class="nav-devider"></li>
         <li class="nav-small-cap">PERSONAL</li>
-        <li> <a class="has-arrow waves-effect waves-dark" aria-expanded="false"><i
-              class="mdi mdi-gauge"></i><span class="hide-menu">Dashboard <span
-                class="label label-rouded label-themecolor pull-right">4</span></span></a>
-          <ul aria-expanded="false" class="collapse">
-            <li><a href="index.html">Minimal </a></li>
-            <li><a href="index2.html">Analytical</a></li>
-            <li><a href="index3.html">Demographical</a></li>
-            <li><a href="index4.html">Modern</a></li>
+        <li *ngFor="let item of menuItem">
+          <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false">
+            <i [class]="item.icono"></i>
+            <span class="hide-menu">
+              {{ item.titulo }}
+              <span class="label label-rouded label-themecolor pull-right">
+                {{ item.submenu.length }}
+              </span>
+            </span>
+          </a>
+
+          <ul>
+            <li *ngFor="let subMenuItem of item.submenu">
+              <a [routerLink]="subMenuItem.url" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
+                {{
+                subMenuItem.titulo }} </a>
+            </li>
           </ul>
         </li>
       </ul>
